# dronecan

./: .gitignore  CMakeLists.txt  README.md  library.properties
examples/: ex.cc  pub.cc  sub.cc
examples/arduino/pub/: pub.ino
examples/arduino/sub/: sub.ino
examples/cmake/: pub.cc  sub.cc
src/: uavcan.h
src/dsdl/equipment/ahrs/: MagneticFieldStrength.hpp  Solution.hpp
src/dsdl/equipment/air_data/: Sideslip.hpp  StaticPressure.hpp  StaticTemperature.hpp
src/dsdl/equipment/esc/: RPMCommand.hpp  RawCommand.hpp  Status.hpp
src/dsdl/equipment/gnss/: Auxiliary.hpp  ECEFPositionVelocity.hpp  Fix2.hpp
src/dsdl/equipment/hardpoint/: Command.hpp
src/dsdl/equipment/ice/: FuelTankStatus.hpp
src/dsdl/equipment/indication/: BeepCommand.hpp  LightsCommand.hpp  RGB565.hpp
src/dsdl/equipment/power/: BatteryInfo.hpp  CircuitStatus.hpp  PrimaryPowerSupplyStatus.hpp
src/dsdl/equipment/safety/: ArmingStatus.hpp
src/dsdl/navigation/: GlobalNavigationSolution.hpp
src/dsdl/protocol/: CANIfaceStats.hpp  DataTypeKind.hpp  GetDataTypeInfo.hpp  GetTransportStats.hpp  RestartNode.hpp
src/dsdl/protocol/debug/: KeyValue.hpp  LogMessage.hpp
src/dsdl/protocol/dynamic_node_id/: Allocation.hpp
src/dsdl/protocol/enumeration/: Begin.hpp
src/dsdl/protocol/file/: BeginFirmwareUpdate.hpp  Delete.hpp  Path.hpp  Write.hpp
src/dsdl/protocol/param/: Empty.hpp  GetSet.hpp  NumericValue.hpp
src/uavcan/: CoarseOrientation.hpp  Timestamp.hpp  build_config.hpp
src/uavcan/driver/teensy/: can.cpp  can.h  clock.cpp  clock.h  restart.cpp  restart.h
src/uavcan/equipment/actuator/: ArrayCommand.hpp  Command.hpp  Status.hpp
src/uavcan/equipment/ahrs/: MagneticFieldStrength2.hpp  RawIMU.hpp
src/uavcan/equipment/air_data/: AngleOfAttack.hpp  IndicatedAirspeed.hpp  RawAirData.hpp  TrueAirspeed.hpp
src/uavcan/equipment/camera_gimbal/: AngularCommand.hpp  GEOPOICommand.hpp  Mode.hpp  Status.hpp
src/uavcan/equipment/device/: Temperature.hpp
src/uavcan/equipment/gnss/: Fix.hpp  RTCMStream.hpp
src/uavcan/equipment/hardpoint/: Status.hpp
src/uavcan/equipment/indication/: SingleLightCommand.hpp
src/uavcan/equipment/range_sensor/: Measurement.hpp
src/uavcan/node/: node.hpp
src/uavcan/protocol/: AccessCommandShell.hpp  GetNodeInfo.hpp  GlobalTimeSync.hpp  HardwareVersion.hpp  NodeStatus.hpp  Panic.hpp  SoftwareVersion.hpp
src/uavcan/protocol/debug/: LogLevel.hpp
src/uavcan/protocol/enumeration/: Indication.hpp
src/uavcan/protocol/file/: EntryType.hpp  Error.hpp  GetDirectoryEntryInfo.hpp  GetInfo.hpp  Read.hpp
src/uavcan/tunnel/: Broadcast.hpp  Call.hpp  Protocol.hpp
(+8 files in other folders)
